swagger doc güncelleniyor, logout endpoint eklendi,testler yazılmaya devam ediyor
